解决首屏加载完进入闯关模块vant的样式无法正常加载的问题

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="https://cdn.bootcss.com/normalize/6.0.0/normalize.min.css" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/vant@2.10/lib/index.css"/>
   <title>阅读海洋</title>
 </head>
 <body>
